Fixed coupon summary truncate

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -306,6 +306,7 @@ body {
 				}
 				p.text-muted {
 					font-size: 12px;
+					min-height: 50px;
 					// margin-bottom: 20px;
 				}
 				.product-footer {
